// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderComponent should match snapshot when user logged in and loading 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  loading={1}
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
  user={
    Object {
      "email": "test@test.com",
      "isGuest": false,
    }
  }
>
  <Component />
</Connect>
`;

exports[`HeaderComponent should match snapshot when user not logged in and not loading 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  loading={0}
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
  user={
    Object {
      "email": "",
      "isGuest": false,
    }
  }
>
  <Component />
</Connect>
`;
